--- a/src/TinyBlazorAdmin/wwwroot/appsettings.json
+++ b/src/TinyBlazorAdmin/wwwroot/appsettings.json
@@ -1,11 +1,11 @@
 {
   "AzureAd": {
-    "Authority": "https://login.microsoftonline.com/206bad4c-d071-4c91-9181-ef7047e6590b",
-    "ClientId": "737debc6-39bb-4e71-8c3e-27bdf3b18846",
+    "Authority": "https://login.microsoftonline.com/c7df09bd-9028-4a2b-bde8-b5db28911732",
+    "ClientId": "047b3771-ccc2-461b-ab82-0a81382f5e61",
     "ValidateAuthority": true
   },
   "UrlShortenerSecuredService": {
-    "Endpoint": "https://azshorterdevrtm3e.azurewebsites.net/"
+    "Endpoint": "https://urlshortoj53g.azurewebsites.net/"
   },
   "DetailedErrors":true
 }
